<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Common  -->
    <string name="common_percent_format">%s%%</string>
    <string name="common_fee_format">Fee: %s</string>
    <string name="common_reliable">Reliable</string>
    <string name="common_enter_amount_label">Enter amount</string>
    <string name="common_enter_amount_hint">0.00</string>
    <string name="common_zero_percent_label">0%</string>
    <string name="common_hundred_percent_label">100%</string>
    <string name="common_empty_title">Unable to retrieve data</string>
    <string name="common_empty_refresh">Refresh</string>
    <!--  Stake(coin list)  -->
    <string name="coin_list_title">Stake</string>
    <string name="coin_list_info_menu">Staking info</string>
    <string name="coin_list_staked">Staked</string>
    <string name="coin_list_ready_to_stake">Ready to stake</string>
    <string name="coin_list_coming_soon">Coming soon</string>
    <string name="coin_list_empty">No supported coins found, try again later</string>
    <!--  Coin Details  -->w
    <string name="coin_details_info">Coin info</string>
    <string name="coin_details_apr">APR:</string>
    <string name="coin_details_service_fee">Service fee:</string>
    <string name="coin_details_stake">Stake</string>
    <string name="coin_details_calculator">Open Calculator</string>
    <string name="coin_details_staked">Staked</string>
    <string name="coin_details_staked_list">List of stakes</string>
    <string name="coin_details_unstake">Unstake</string>
    <string name="coin_details_validator">Validator:</string>
    <string name="coin_details_income">Yearly income:</string>
    <string name="coin_details_claim">Claim Rewards</string>
    <string name="coin_details_available_rewards">Available rewards:</string>
    <string name="coin_details_about">About</string>
    <!--  Calculator  -->
    <string name="calculator_title">Calculator</string>
    <string name="calculator_options_label">Select options</string>
    <string name="calculator_yearly_income">Yearly income: %s</string>
    <string name="calculator_currency_label">Currency</string>
    <string name="calculator_validator_label">Validator</string>
    <string name="calculator_daily_income_label">Daily</string>
    <string name="calculator_monthly_income_label">Monthly</string>
    <string name="calculator_yearly_income_label">Yearly</string>
    <string name="calculator_include_fee">Include validation fee</string>
    <string name="calculator_reinvest">Reinvest earnings</string>
    <string name="calculator_proceed_to_staking">Proceed to staking</string>
    <!--  Select currency  -->
    <string name="select_coin_title">Select currency</string>
    <!--  Select validator  -->
    <string name="select_validator_title">Select validator</string>
    <string name="select_validator_confirm_button">Confirm</string>
    <!--  Unstake  -->
    <string name="unstake_title">New unstake</string>
    <string name="unstake_staked">Staked:</string>
    <string name="unstake_time_label">Unstake time</string>
    <string name="unstake_time_immediate">The funds will be returned immediately</string>
    <string name="unstake_time_format">The funds will return in %s</string>
    <string name="unstake_button_text">Unstake</string>
    <!--  Stake  -->
    <string name="stake_title">New stake</string>
    <string name="stake_subtitle">Yearly income:</string>
    <string name="stake_balance_label">Balance:</string>
    <string name="stake_select_label">Select validator</string>
    <string name="stake_button_text">Stake</string>
</resources>