<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/income_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EverstakeTheme.SecondaryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_daily_income_label" />

        <TextView
            android:id="@+id/incomeDailyText"
            style="@style/EverstakeTheme.PrimaryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="0.783 XTZ" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/EverstakeTheme.SecondaryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_monthly_income_label" />

        <TextView
            android:id="@+id/incomeMonthlyText"
            style="@style/EverstakeTheme.PrimaryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="1.315 XTZ" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/EverstakeTheme.SecondaryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_yearly_income_label" />

        <TextView
            android:id="@+id/incomeYearlyText"
            style="@style/EverstakeTheme.PrimaryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="23.715 XTZ" />
    </LinearLayout>

</LinearLayout>